--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,11 @@
 {
-    "short_name": "MDN",
-    "name": "MDN Web Docs",
+    "short_name": "YU-GI-OH",
+    "name": "Clone yu-gi-oh",
     "icons": [
       {
-        "src": "/favicon-192x192.png",
-        "sizes": "192x192",
-        "type": "image/png"
-      },
-      {
-        "src": "/favicon-512x512.png",
-        "sizes": "512x512",
-        "type": "image/png"
+        "src": "yugioh.ico",
+        "sizes": "256x256",
+        "type": "image/pico"
       }
     ],
     "start_url": ".",
